--- a/src/pages/packs/packsList/pack/Pack.module.scss
+++ b/src/pages/packs/packsList/pack/Pack.module.scss
@@ -3,6 +3,7 @@
     cursor: pointer;
   }
 }
+
 .disabledName {
-  opacity: .5;
+  color: rgb(50 50 50 / 31%);
 }
